add support for rg35xx-plus boards, tested on RG35XX-H

--- a/projects/Makefile
+++ b/projects/Makefile
@@ -169,6 +169,18 @@ MIYOODIRS      :=    . \
 				../sources/Adapters/SDL/GUI \
 				../sources/Adapters/SDL/Timer
 
+RG35XXHDIRS      :=    . \
+				../sources/Adapters/DINGOO/Main \
+				../sources/Adapters/Unix/FileSystem \
+				../sources/System/Process \
+				../sources/Adapters/Unix/Process \
+				../sources/Adapters/DINGOO/System \
+				../sources/Adapters/Dummy/Midi \
+				../sources/Adapters/SDL/Audio \
+				../sources/Adapters/SDL/Process \
+				../sources/Adapters/SDL/GUI \
+				../sources/Adapters/SDL/Timer
+
 PSPDIRS	:=    . \
 				../sources/Adapters/PSP/Main \
 				../sources/Adapters/PSP/FileSystem \
@@ -301,6 +313,23 @@ MIYOOFILES    :=  GPSDLMain.o \
 					SDLEventManager.o \
 					DummyMidi.o \
 					SDLGUIWindowImp.o 
+
+RG35XXHFILES    :=  GPSDLMain.o \
+					UnixFileSystem.o \
+					SDLAudio.o \
+					Process.o \
+					UnixProcess.o \
+					SDLAudioDriver.o \
+					MIYOOSystem.o \
+					DINGOOEventQueue.o \
+					SDLProcess.o \
+					SDLTimer.o \
+					GUIFactory.o \
+					SDLEventManager.o \
+					DummyMidi.o \
+					SDLGUIWindowImp.o
+
+
 
 PSPFILES		:=	PSPmain.o  \
 					PSPFileSystem.o \
@@ -602,6 +631,7 @@ deploy:
 #	make PLATFORM=RS97
 #	make PLATFORM=BITTBOY
 	make PLATFORM=MIYOO
+	make PLATFORM=RG35XXH
 #	./resources/packaging/docker_steam.sh
 	./resources/packaging/build_and_copy_from_pi.sh
 	./resources/packaging/build_and_copy_from_chip.sh
