--- a/projects/Makefile
+++ b/projects/Makefile
@@ -73,7 +73,7 @@ LINUXDIRS := \
 	../sources/Adapters/RTAudio \
 	../sources/Adapters/RTMidi \
 	../sources/Adapters/SDL/Timer \
-	../sources/Adapters/SDL/GUI 
+	../sources/Adapters/SDL/GUI
 
 BEAGLEBOARDDIRS := $(LINUXDIRS)
 DEBDIRS := $(LINUXDIRS)
@@ -84,26 +84,35 @@ STEAMDIRS := $(LINUXDIRS)
 # Consoles/Embedded
 #---------------------------------------------------------------------------------
 
-NDSDIRS := \
+CAANOODIRS := \
 	. \
-	../sources/Adapters/NDS/FileSystem \
-	../sources/Adapters/NDS/System \
-	../sources/Adapters/NDS/Main \
-	../sources/Adapters/Dummy/Midi \
-	../sources/Adapters/NDS/Sound \
-	../sources/Adapters/NDS/UI
+	../sources/Adapters/CAANOO/Main \
+	../sources/Adapters/Unix/FileSystem \
+	../sources/System/Process \
+	../sources/Adapters/Unix/Process \
+	../sources/Adapters/CAANOO/System \
+	../sources/Adapters/CAANOO/Midi \
+	../sources/Adapters/CAANOO/Audio \
+	../sources/Adapters/SDL/GUI \
+	../sources/Adapters/SDL/Timer
 
-PSPDIRS := \
+DINGOODIRS := \
 	. \
-	../sources/Adapters/PSP/Main \
-	../sources/Adapters/PSP/FileSystem \
-  	../sources/System/Process \
-	../sources/Adapters/PSP/System \
-	../sources/Adapters/Dummy/Midi \
-	../sources/Adapters/SDL/Process \
+	../sources/Adapters/DINGOO/Main \
+	../sources/Adapters/Unix/FileSystem \
+	../sources/System/Process \
+	../sources/Adapters/Unix/Process \
+	../sources/Adapters/DINGOO/System \
+	../sources/Adapters/DINGOO/Midi \
+	../sources/Adapters/DINGOO/Audio \
 	../sources/Adapters/SDL/Audio \
+	../sources/Adapters/SDL/Process \
 	../sources/Adapters/SDL/GUI \
 	../sources/Adapters/SDL/Timer 
+
+RS97DIRS := $(DINGOODIRS)
+BITTBOYDIRS := $(DINGOODIRS)
+MIYOODIRS := $(DINGOODIRS)
 
 GP2XDIRS := \
 	. \
@@ -126,36 +135,26 @@ GP32DIRS := \
 	../sources/Adapters/GP32Timer \
 	../sources/Adapters/GP32UI
 
-CAANOODIRS := \
+NDSDIRS := \
 	. \
-	../sources/Adapters/CAANOO/Main \
-	../sources/Adapters/Unix/FileSystem \
-	../sources/System/Process \
-	../sources/Adapters/Unix/Process \
-	../sources/Adapters/CAANOO/System \
-	../sources/Adapters/CAANOO/Midi \
-	../sources/Adapters/CAANOO/Audio \
-	../sources/Adapters/SDL/GUI \
-	../sources/Adapters/SDL/Timer
-
-DINGOODIRS := \
-	. \
-	../sources/Adapters/DINGOO/Main \
-	../sources/Adapters/Unix/FileSystem \
-	../sources/System/Process \
-	../sources/Adapters/Unix/Process \
-	../sources/Adapters/DINGOO/System \
-	../sources/Adapters/DINGOO/Midi \
+	../sources/Adapters/NDS/FileSystem \
+	../sources/Adapters/NDS/System \
+	../sources/Adapters/NDS/Main \
 	../sources/Adapters/Dummy/Midi \
-	../sources/Adapters/DINGOO/Audio \
-	../sources/Adapters/SDL/Audio \
+	../sources/Adapters/NDS/Sound \
+	../sources/Adapters/NDS/UI
+
+PSPDIRS := \
+	. \
+	../sources/Adapters/PSP/Main \
+	../sources/Adapters/PSP/FileSystem \
+	../sources/System/Process \
+	../sources/Adapters/PSP/System \
+	../sources/Adapters/Dummy/Midi \
 	../sources/Adapters/SDL/Process \
+	../sources/Adapters/SDL/Audio \
 	../sources/Adapters/SDL/GUI \
 	../sources/Adapters/SDL/Timer
-
-RS97DIRS := $(DINGOODIRS)
-BITTBOYDIRS := $(DINGOODIRS)
-MIYOODIRS := $(DINGOODIRS)
 
 #---------------------------------------------------------------------------------
 # Windows
@@ -177,245 +176,6 @@ W32DIRS := \
 #---------------------------------------------------------------------------------
 # files definition
 #---------------------------------------------------------------------------------
-
-DINGOOFILES := \
-	GPSDLMain.o \
-	UnixFileSystem.o \
-	DummyMidi.o \
-	DINGOOAudio.o \
-	Process.o \
-	UnixProcess.o \
-	SDLAudioDriver.o \
-	DINGOOAudioDriver.o \
-	DINGOOSystem.o \
-	DINGOOEventQueue.o \
-	SDLProcess.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	SDLGUIWindowImp.o
-
-RS97FILES := \
-	GPSDLMain.o \
-	UnixFileSystem.o \
-	DINGOOAudio.o \
-	Process.o \
-	UnixProcess.o \
-	SDLAudioDriver.o \
-	DINGOOAudioDriver.o \
-	BITTBOYSystem.o \
-	DINGOOEventQueue.o \
-	SDLProcess.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	BITTBOYSerialMidiDevice.o \
-	BITTBOYMidiService.o \
-	SDLGUIWindowImp.o 
-
-BITTBOYFILES := \
-	GPSDLMain.o \
-	UnixFileSystem.o \
-	DINGOOAudio.o \
-	Process.o \
-	UnixProcess.o \
-	SDLAudioDriver.o \
-	DINGOOAudioDriver.o \
-	BITTBOYSystem.o \
-	DINGOOEventQueue.o \
-	SDLProcess.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	BITTBOYSerialMidiDevice.o \
-	BITTBOYMidiService.o \
-	SDLGUIWindowImp.o 
-
-MIYOOFILES := \
-	GPSDLMain.o \
-	UnixFileSystem.o \
-	SDLAudio.o \
-	Process.o \
-	UnixProcess.o \
-	SDLAudioDriver.o \
-	MIYOOSystem.o \
-	DINGOOEventQueue.o \
-	SDLProcess.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	DummyMidi.o \
-	SDLGUIWindowImp.o 
-
-RG35XXFILES := \
-	GPSDLMain.o \
-	UnixFileSystem.o \
-	SDLAudio.o \
-	Process.o \
-	UnixProcess.o \
-	SDLAudioDriver.o \
-	MIYOOSystem.o \
-	DINGOOEventQueue.o \
-	SDLProcess.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	DummyMidi.o \
-	SDLGUIWindowImp.o
-# RtMidi.o \	#Disabled for now
-# RTMidiService.o \
-# RTMidiOutDevice.o \
-# RTMidiInDevice.o \
-
-PSPFILES := \
-	PSPmain.o \
-	PSPFileSystem.o \
-	Process.o \
-	DummyMidi.o \
-	GUIFactory.o \
-	SDLGUIWindowImp.o \
-	SDLEventManager.o \
-	SDLAudioDriver.o \
-	SDLAudio.o \
-	SDLProcess.o \
-	SDLTimer.o \
-	PSPSystem.o
-
-DEBFILES := \
-	UnixFileSystem.o \
-	DEBmain.o \
-	DEBSystem.o \
-	GUIFactory.o \
-	SDLGUIWindowImp.o \
-	SDLEventManager.o \
-	Process.o \
-	UnixProcess.o \
-	RTAudioDriver.o \
-	RTAudioStub.o \
-	RtAudio.o\
-	RtMidi.o\
-	RTMidiService.o\
-	RTMidiOutDevice.o\
-	RTMidiInDevice.o\
-	SDLTimer.o \
-	JackAudioDriver.o \
-	JackClient.o \
-	JackAudio.o 
-
-BEAGLEBOARDFILES := \
-	UnixFileSystem.o \
-	DEBmain.o \
-	DEBSystem.o \
-	GUIFactory.o \
-	SDLGUIWindowImp.o \
-	SDLEventManager.o \
-	Process.o \
-	UnixProcess.o \
-	DummyMidi.o \
-	RTAudioDriver.o \
-	RTAudioStub.o \
-	RtAudio.o\
-	SDLTimer.o 
-
-RASPIFILES := \
-	UnixFileSystem.o \
-	DEBmain.o \
-	DEBSystem.o \
-	GUIFactory.o \
-	SDLGUIWindowImp.o \
-	SDLEventManager.o \
-	Process.o \
-	UnixProcess.o \
-	RTAudioDriver.o \
-	RTAudioStub.o \
-	RtAudio.o \
-	RtMidi.o \
-	RTMidiService.o \
-	RTMidiOutDevice.o \
-	RTMidiInDevice.o \
-	SDLTimer.o \
-	JackAudioDriver.o \
-	JackClient.o \
-	JackAudio.o
-
-STEAMFILES := \
-	UnixFileSystem.o \
-	DEBmain.o \
-	DEBSystem.o \
-	GUIFactory.o \
-	SDLGUIWindowImp.o \
-	SDLEventManager.o \
-	Process.o \
-	UnixProcess.o \
-	RTAudioDriver.o \
-	RTAudioStub.o \
-	RtAudio.o\
-	RtMidi.o\
-	RTMidiService.o\
-	RTMidiOutDevice.o\
-	RTMidiInDevice.o\
-	SDLTimer.o \
-	JackAudioDriver.o \
-	JackClient.o \
-	JackAudio.o
-
-NDSFILES := \
-	NDSmain.o \
-	NDSFileSystem.o \
-	DummyMidi.o \
-	NDSSound.o \
-	NDSSystem.o \
-	GUIFactory.o \
-	NDSGUIWindowImp.o
-
-W32FILES := \
-	WSDLmain.o \
-	W32FileSystem.o \
-	W32Midi.o \
-	W32AudioDriver.o \
-	WSDLSystem.o \
-	SDLInput.o \
-	Process.o \
-	W32Process.o \
-	W32Audio.o \
-	GUIFactory.o \
-	WSDLGUIWindowImp.o
-
-GP2XFILES := \
-	GPSDLMain.o \
-	GP2XFileSystem.o \
-	GP2XMidiService.o \
-	GP2XSerialMidiDevice.o \
-	GP2XAudio.o \
-	Process.o \
-	UnixProcess.o \
-	GP2XAudioDriver.o \
-	GP2XSystem.o \
-	GP2XEventQueue.o \
-	gpmemcpy.o \
-	gpmemset.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	SDLGUIWindowImp.o
-
-CAANOOFILES := \
-	CAANOOSDLMain.o \
-	UnixFileSystem.o \
-	CAANOOMidiService.o \
-	CAANOOSerialMidiDevice.o \
-	CAANOOAudio.o \
-	Process.o \
-	UnixProcess.o \
-	CAANOOAudioDriver.o \
-	CAANOOSystem.o \
-	CAANOOEventQueue.o \
-	gpmemcpy.o \
-	gpmemset.o \
-	SDLTimer.o \
-	GUIFactory.o \
-	SDLEventManager.o \
-	SDLGUIWindowImp.o
 
 COMMONFILES := \
 	Logger.o Trace.o Result.o Status.o Config.o \
@@ -470,6 +230,162 @@ COMMONFILES := \
 	tinyxmlparser.o tinyxml.o tinyxmlerror.o tinystr.o Tiny2NosStub.o
 
 #---------------------------------------------------------------------------------
+# Linux
+#---------------------------------------------------------------------------------
+
+LINUXFILES := \
+	UnixFileSystem.o \
+	DEBmain.o \
+	DEBSystem.o \
+	GUIFactory.o \
+	SDLGUIWindowImp.o \
+	SDLEventManager.o \
+	Process.o \
+	UnixProcess.o \
+	RTAudioDriver.o \
+	RTAudioStub.o \
+	RtAudio.o\
+	SDLTimer.o
+
+RTMIDIFILES := \
+	RtMidi.o\
+	RTMidiService.o\
+	RTMidiOutDevice.o\
+	RTMidiInDevice.o
+
+JACKFILES := \
+	JackAudioDriver.o \
+	JackClient.o \
+	JackAudio.o 
+
+DEBFILES := $(LINUXFILES) $(RTMIDIFILES) $(JACKFILES)
+BEAGLEBOARDFILES := $(LINUXFILES) DummyMidi.o
+RASPIFILES := $(LINUXFILES) $(RTMIDIFILES) $(JACKFILES)
+STEAMFILES := $(LINUXFILES) $(RTMIDIFILES) $(JACKFILES)
+
+#---------------------------------------------------------------------------------
+# Consoles/Embedded
+#---------------------------------------------------------------------------------
+
+CAANOOFILES := \
+	CAANOOSDLMain.o \
+	UnixFileSystem.o \
+	CAANOOMidiService.o \
+	CAANOOSerialMidiDevice.o \
+	CAANOOAudio.o \
+	Process.o \
+	UnixProcess.o \
+	CAANOOAudioDriver.o \
+	CAANOOSystem.o \
+	CAANOOEventQueue.o \
+	gpmemcpy.o \
+	gpmemset.o \
+	SDLTimer.o \
+	GUIFactory.o \
+	SDLEventManager.o \
+	SDLGUIWindowImp.o 
+
+GP2XFILES := \
+	GPSDLMain.o \
+	GP2XFileSystem.o \
+	GP2XMidiService.o \
+	GP2XSerialMidiDevice.o \
+	GP2XAudio.o \
+	Process.o \
+	UnixProcess.o \
+	GP2XAudioDriver.o \
+	GP2XSystem.o \
+	GP2XEventQueue.o \
+	gpmemcpy.o \
+	gpmemset.o \
+	SDLTimer.o \
+	GUIFactory.o \
+	SDLEventManager.o \
+	SDLGUIWindowImp.o 
+
+DINGUXFILES := \
+	DINGOOEventQueue.o \
+	GPSDLMain.o \
+	GUIFactory.o \
+	Process.o \
+	SDLAudioDriver.o \
+	SDLEventManager.o \
+	SDLGUIWindowImp.o \
+	SDLProcess.o \
+	SDLTimer.o \
+	UnixFileSystem.o \
+	UnixProcess.o
+
+DINGOOFILES := \
+	$(DINGUXFILES) \
+	DummyMidi.o \
+	DINGOOAudio.o \
+	DINGOOAudioDriver.o \
+	DINGOOSystem.o
+
+RS97FILES := \
+	$(DINGUXFILES) \
+	DINGOOAudio.o \
+	DINGOOAudioDriver.o \
+	BITTBOYSystem.o \
+	BITTBOYSerialMidiDevice.o \
+	BITTBOYMidiService.o
+
+BITTBOYFILES := \
+	$(DINGUXFILES) \
+	DINGOOAudio.o \
+	DINGOOAudioDriver.o \
+	BITTBOYSystem.o \
+	BITTBOYSerialMidiDevice.o \
+	BITTBOYMidiService.o
+
+MIYOOFILES := \
+	$(DINGUXFILES) \
+	DummyMidi.o \
+	MIYOOSystem.o \
+	SDLAudio.o
+
+NDSFILES := \
+	NDSmain.o \
+	NDSFileSystem.o \
+	DummyMidi.o \
+	NDSSound.o \
+	NDSSystem.o \
+	GUIFactory.o \
+	NDSGUIWindowImp.o
+
+PSPFILES := \
+	PSPmain.o \
+	PSPFileSystem.o \
+	Process.o \
+	DummyMidi.o \
+	GUIFactory.o \
+	SDLGUIWindowImp.o \
+	SDLEventManager.o \
+	SDLAudioDriver.o \
+	SDLAudio.o \
+	SDLProcess.o \
+	SDLTimer.o \
+	PSPSystem.o
+
+#---------------------------------------------------------------------------------
+# Windows
+#---------------------------------------------------------------------------------
+
+W32FILES := \
+	WSDLmain.o \
+	W32FileSystem.o \
+	W32Midi.o \
+	W32AudioDriver.o \
+	WSDLSystem.o \
+	SDLInput.o \
+	Process.o \
+	W32Process.o \
+	W32Audio.o \
+	GUIFactory.o \
+	WSDLGUIWindowImp.o
+
+#---------------------------------------------------------------------------------
 # TARGET is the name of the output
 # BUILD is the directory where object files & intermediate files will be placed
 # SOURCES is a list of directories containing source code
@@ -514,7 +430,8 @@ export DEPSDIR := $(CURDIR)/$(BUILD)
 export LD := $(CXX)
 export OFILES := $(COMMONFILES) $($(PLATFORM)FILES) 
 export OBJS := $(OFILES)
-export INCLUDE := $(foreach dir,$(INCLUDES),-I$(CURDIR)/$(dir)) \
+export INCLUDE := \
+	$(foreach dir,$(INCLUDES),-I$(CURDIR)/$(dir)) \
 	$(foreach dir,$(LIBDIRS),-I$(dir)/include) \
 	-I$(CURDIR)/$(BUILD)
 export LIBPATHS := $(foreach dir,$(LIBDIRS),-L$(dir)/lib)
