--- a/projects/Makefile
+++ b/projects/Makefile
@@ -92,6 +92,7 @@ DEBDIRS := $(LINUXDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS)
 RASPIDIRS := $(LINUXDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS)
 STEAMDIRS := $(LINUXDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS)
 X64DIRS := $(LINUXDIRS) $(RTMIDIDIRS) $(SDLAUDIODIRS)
+X86DIRS := $(LINUXDIRS) $(JACKDIRS) $(RTAUDIODIRS) $(RTMIDIDIRS)
 
 #---------------------------------------------------------------------------------
 # Consoles/Embedded
@@ -267,25 +268,26 @@ RTAUDIOFILES := \
 	RtAudio.o
 
 RTMIDIFILES := \
-	RtMidi.o\
-	RTMidiService.o\
-	RTMidiOutDevice.o\
+	RtMidi.o \
+	RTMidiService.o \
+	RTMidiOutDevice.o \
 	RTMidiInDevice.o
 
 JACKFILES := \
 	JackAudioDriver.o \
 	JackClient.o \
-	JackAudio.o 
+	JackAudio.o
 
 SDLAUDIOFILES := \
 	SDLAudioDriver.o \
 	SDLAudio.o
 
-DEBFILES := $(LINUXFILES) $(RTMIDIFILES) $(JACKFILES)
+DEBFILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
 BEAGLEBOARDFILES := $(LINUXFILES) $(DUMMYMIDIFILES)
-RASPIFILES := $(LINUXFILES) $(RTMIDIFILES) $(JACKFILES)
-STEAMFILES := $(LINUXFILES) $(RTMIDIFILES) $(JACKFILES)
+RASPIFILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
+STEAMFILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
 X64FILES := $(LINUXFILES) $(SDLAUDIOFILES) $(RTMIDIFILES)
+X86FILES := $(LINUXFILES) $(RTAUDIOFILES) $(RTMIDIFILES) $(JACKFILES)
 
 #---------------------------------------------------------------------------------
 # Consoles/Embedded
