--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,21 +14,21 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-#      - name: install python deps
-#        shell: bash
-#        run: |
-#          python3 -m venv venv
-#          source venv/bin/activate
-#          python3 -m pip install -r requirements.txt
+      - name: install python deps
+        run: |
+          python3 -m venv venv
+          source venv/bin/activate
+          python3 -m pip install -r requirements.txt
+
+      - name: install linux deps
+        run: | 
+          sudo apt install libsdl1.2-dev libsdk_mixer1.2-dev libasound2-dev libjack-dev
 
       - name: build x86_64
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python3 -m venv venv
-          source venv/bin/activate
-          python3 -m pip install -r requirements.txt
           cd projects
           make PLATFORM=X64
           gh release upload nightly lgpt.x64
