--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python3 -m venv venv
           source venv/bin/activate
-          python3 -m pip install -r requirements.txt
+          pip3 install -r requirements.txt
 
       - name: install linux deps
         run: | 
