fix: remove python virtualenv creation in gh task runner

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,9 +16,7 @@ jobs:
 
       - name: install python deps
         run: |
-          python3 -m venv venv
-          source venv/bin/activate
-          pip3 install -r requirements.txt
+          pip3 install --break-system-packages -r requirements.txt
 
       - name: install linux deps
         run: | 
