--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: install python deps
         run: |
-          pip3 install --break-system-packages -r requirements.txt
+          pip3 install -r requirements.txt
 
       - name: install linux deps
         run: | 
