--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,9 +12,9 @@ jobs:
       
       - name: Install required libraries
         run: |
-            dpkg --add-architecture i386 
-            apt update
-            apt install -y git make gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
+            sudo dpkg --add-architecture i386 
+            sudo apt update
+            sudo apt install -y git make gcc-multilib g++-multilib libsdl1.2-dev:i386 libasound2-plugins:i386 libjack-dev:i386
 
       - name: Build DEB
         run: |
